build_output.txt

> izishopin@0.1.0 build
> vite build --sourcemap

[36mvite v5.0.0 [32mbuilding for production...[36m[39m
transforming...
Error processing file src\pages\shop-owner-dashboard\index.jsx: SyntaxError: Unexpected token (300:8)
    at constructor (C:\Users\Dell\Desktop\Desktop\InternSatis\izishop\frontend\node_modules\@babel\parser\lib\index.js:363:19)
    at TypeScriptParserMixin.raise (C:\Users\Dell\Desktop\Desktop\InternSatis\izishop\frontend\node_modules\@babel\parser\lib\index.js:6609:19)
    at TypeScriptParserMixin.unexpected (C:\Users\Dell\Desktop\Desktop\InternSatis\izishop\frontend\node_modules\@babel\parser\lib\index.js:6629:16)
    at TypeScriptParserMixin.parseExprAtom (C:\Users\Dell\Desktop\Desktop\InternSatis\izishop\frontend\node_modules\@babel\parser\lib\index.js:11378:16)
    at TypeScriptParserMixin.parseExprAtom (C:\Users\Dell\Desktop\Desktop\InternSatis\izishop\frontend\node_modules\@babel\parser\lib\index.js:4776:20)
    at TypeScriptParserMixin.parseExprSubscripts (C:\Users\Dell\Desktop\Desktop\InternSatis\izishop\frontend\node_modules\@babel\parser\lib\index.js:11012:23)
    at TypeScriptParserMixin.parseUpdate (C:\Users\Dell\Desktop\Desktop\InternSatis\izishop\frontend\node_modules\@babel\parser\lib\index.js:10997:21)
    at TypeScriptParserMixin.parseMaybeUnary (C:\Users\Dell\Desktop\Desktop\InternSatis\izishop\frontend\node_modules\@babel\parser\lib\index.js:10977:23)
    at TypeScriptParserMixin.parseMaybeUnary (C:\Users\Dell\Desktop\Desktop\InternSatis\izishop\frontend\node_modules\@babel\parser\lib\index.js:9794:18)
    at TypeScriptParserMixin.parseMaybeUnaryOrPrivate (C:\Users\Dell\Desktop\Desktop\InternSatis\izishop\frontend\node_modules\@babel\parser\lib\index.js:10830:61) {
  code: 'BABEL_PARSER_SYNTAX_ERROR',
  reasonCode: 'UnexpectedToken',
  loc: Position { line: 300, column: 8, index: 11007 },
  pos: 11007,
  syntaxPlugin: undefined
}
[32m✓[39m 60 modules transformed.
[31m[vite:esbuild] Transform failed with 1 error:
C:/Users/Dell/Desktop/Desktop/InternSatis/izishop/frontend/src/pages/shop-owner-dashboard/index.jsx:300:8: ERROR: Unexpected "catch"[39m
file: [36mC:/Users/Dell/Desktop/Desktop/InternSatis/izishop/frontend/src/pages/shop-owner-dashboard/index.jsx:300:8[39m
[33m
[33mUnexpected "catch"[33m
298|          }
299|  
300|        } catch (error) {
   |          ^
301|          if (isMounted) {
302|            console.error('Error loading dashboard data:', error);
[39m
[31merror during build:
Error: Transform failed with 1 error:
C:/Users/Dell/Desktop/Desktop/InternSatis/izishop/frontend/src/pages/shop-owner-dashboard/index.jsx:300:8: ERROR: Unexpected "catch"
    at failureErrorWithLog (C:\Users\Dell\Desktop\Desktop\InternSatis\izishop\frontend\node_modules\esbuild\lib\main.js:1651:15)
    at C:\Users\Dell\Desktop\Desktop\InternSatis\izishop\frontend\node_modules\esbuild\lib\main.js:849:29
    at responseCallbacks.<computed> (C:\Users\Dell\Desktop\Desktop\InternSatis\izishop\frontend\node_modules\esbuild\lib\main.js:704:9)
    at handleIncomingPacket (C:\Users\Dell\Desktop\Desktop\InternSatis\izishop\frontend\node_modules\esbuild\lib\main.js:764:9)
    at Socket.readFromStdout (C:\Users\Dell\Desktop\Desktop\InternSatis\izishop\frontend\node_modules\esbuild\lib\main.js:680:7)
    at Socket.emit (node:events:518:28)
    at addChunk (node:internal/streams/readable:561:12)
    at readableAddChunkPushByteMode (node:internal/streams/readable:512:3)
    at Readable.push (node:internal/streams/readable:392:5)
    at Pipe.onStreamRead (node:internal/stream_base_commons:189:23)[39m
